--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
       Navbar Content
     </nav>
 
+    <div id="content-container">
       <header>
         <h1>Header</h1>
         <p>Temporary Description?</p>
       </header>
+
+      <section>
+        <p>A temporary paragraph, testing the parallax effect right now</p>
+      </section>
+    </div>
   </div>
 
-<div id="content-container">
-<p>content?</p>
-</div>
   <!-- Custom cursor elements -->
   <div id="custom-cursor"></div>
   <div class="cursor-trail"></div>
